--- a/src/styles/drawer.scss
+++ b/src/styles/drawer.scss
@@ -10,6 +10,26 @@
   box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
   transition: all 0.3s ease-in-out;
+  
+  &--animate {
+    transition: all 0.3s ease-in-out;
+    -webkit-animation: bounce 0.5s 5;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    height: 50px;
+  }
+  25% {
+    height: 55px;
+  }
+  75% {
+    height: 60px;
+  }
+  100% {
+    height: 50px;
+  }
 }
 
 .c-drawer.active {
