--- a/src/styles/municipalities.scss
+++ b/src/styles/municipalities.scss
@@ -1,69 +1,78 @@
 .c-municipalities {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.95);
-  width: 100%;
-  height: 100%;
-  padding: 0 5vw;
-  margin: 0 auto;
-  overflow: auto;
-  text-align: left;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.95);
+    width: 100%;
+    height: 100%;
+    padding: 0 5vw;
+    margin: 0 auto;
+    overflow: auto;
+    text-align: left;
 
-  a {
-    text-decoration: none;
-    margin: 0;
-  }
+    a {
+        text-decoration: none;
+        margin: 0;
+    }
 }
 
-.c-municipalities .c-municipalities--header h1 {
-  display: inline-block;
+.c-municipalities .c-municipalities--header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    header {
+        width: 140px;
+        height: 50px;
+        background-image: url(./../images/logo-header.png);
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
 }
 .c-municipalities .c-municipalities--header .c-button--wrapper {
-  float: right;
+    margin-left: auto;
 }
 
 .c-municipalities .c-container {
-  width: 100%;
-  margin: 15px 0;
+    width: 100%;
+    margin: 15px 0;
 }
 
 .c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
-  padding-right: 20px;
+    padding-right: 20px;
 }
 
 @media (max-width: 670px) {
+    .c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
+        padding-right: 40px;
+    }
 
-  .c-municipalities .c-municipalities--header .c-button--wrapper .c-container .c-button .c-button--text {
-    padding-right: 40px;
-  }
-
-  .c-municipalities .c-container {
-    width: 100%;
-    margin: 7px 0;
-  }
+    .c-municipalities .c-container {
+        width: 100%;
+        margin: 7px 0;
+    }
 }
 
 .c-municipalities .c-searchBox {
-  width: auto;
+    width: auto;
 }
 
 .c-municipalities .c-municipality {
-  text-align: left;
-  cursor: pointer;
-  padding: 15px;
-  width: 100%;
-  border: 2px solid transparent;
+    text-align: left;
+    cursor: pointer;
+    padding: 15px;
+    width: 100%;
+    border: 2px solid transparent;
 }
 
 .c-municipalities .c-municipality h4 {
-  margin: 0;
-  color: black;
+    margin: 0;
+    color: black;
 }
 
 .c-municipality:hover {
-  border: 2px solid #ed6000;
+    border: 2px solid #ed6000;
 }
