--- a/src/styles/documentItem.scss
+++ b/src/styles/documentItem.scss
@@ -1,177 +1,180 @@
 .c-documents .c-documents--item {
-  margin-bottom: 30px;
-  text-align: left;
-  width: 100%;
-  border: 2px solid transparent;
+    margin-bottom: 30px;
+    text-align: left;
+    width: 100%;
+    border: 2px solid transparent;
 }
 
 .c-documents .c-documents--content {
-  cursor: pointer;
-  position: relative;
+    cursor: pointer;
+    position: relative;
 }
 
 .c-documents--item:hover {
-  border: 2px solid #ed6000;
+    border: 2px solid #ed6000;
 }
 
 .c-documents--content .icon {
-  top: 50%;
-  margin-top: -35px;
+    top: 50%;
+    margin-top: -35px;
 }
 
 .c-documents .c-documents--text {
-  padding: 15px 15px 15px 70px;
-  width: 50%;
-  display: inline-block;
+    padding: 15px 15px 15px 70px;
+    width: 50%;
+    display: inline-block;
 }
 
 @media (max-width: 900px) {
-  .c-documents .c-documents--text {
-    width: 92%;
-  }
+    .c-documents .c-documents--text {
+        width: 92%;
+    }
 
-  .c-documents .c-documents--tag {
-    width: 100%;
-    padding-top: 0px;
-  }
+    .c-documents .c-documents--tag {
+        width: 100%;
+        padding-top: 0px;
+    }
 }
 
 .c-documents--text h3 {
-  font-weight: lighter;
-  margin: 5px 0;
+    font-weight: lighter;
+    margin: 5px 0;
 }
 
 .c-documents--text h2 {
-  font-weight: 600;
-  margin: 5px 0;
+    font-weight: 600;
+    margin: 5px 0;
 }
 
 .c-documents--tag {
-  width: 45%;
-  padding-right: 45px;
-  padding-top: 35px;
-  padding-bottom: 10px;
-  float: right;
-  display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
+    width: 45%;
+    padding-right: 45px;
+    padding-top: 35px;
+    padding-bottom: 10px;
+    float: right;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 .c-documents--tag div {
-  display: inline-block;
- }
+    display: inline-block;
+}
 
 .c-documents--tag div .c-container {
-  width: auto;
-  margin: 5px;
+    width: auto;
+    margin: 5px;
 }
 
 .c-documents .c-button {
-  background: #eeeeee;
-  padding: 7px;
+    background: #eeeeee;
+    padding: 7px;
 }
 
-.c-documents--tag .c-button:hover,
-.c-button.active,
-.c-button.loading {
-  box-shadow: none;
+.c-documents--tag .c-button:hover {
+    box-shadow: none;
 }
 
 .c-documents .c-button--text {
-  min-width: 35px;
-  line-height: 10px;
+    min-width: 35px;
+    line-height: 10px;
 }
 
 .c-documents .c-documents--dropdown {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
-  border: none;
-  outline: none;
-  background: transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    border: none;
+    outline: none;
+    background: transparent;
 }
 
 .c-details .c-container {
-  margin-top: 2px;
+    margin-top: 2px;
 }
 
 .c-details .c-details--content {
-  padding: 10px;
-  background: #eeeeee;
-  min-height: 54px;
+    padding: 10px;
+    background: #eeeeee;
+    min-height: 54px;
 }
 
 .c-details .c-details--text {
-  margin-bottom: 10px;
-  padding-right: 34px;
+    margin-bottom: 10px;
+    padding-right: 34px;
 }
 
 .c-details .c-details--toponym {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .c-details .c-details--snippets {
-  margin-bottom: 10px;
-  font-style: italic;
-  font-weight: lighter;
-  padding-right: 34px;
+    margin-bottom: 10px;
+    font-style: italic;
+    font-weight: lighter;
+    padding-right: 34px;
 }
 
 .source__title {
-  display: inline-block;
-  margin: 5px 5px;
-  font-style: normal;
+    display: inline-block;
+    margin: 5px 5px;
+    font-style: normal;
 }
 
-.c-details h3, p, a {
-  margin: 5px;
-  font-weight: normal;
+.c-details h3,
+p,
+a {
+    margin: 5px;
+    font-weight: normal;
 }
 
-.c-details p, a {
-  font-size: 15px;
+.c-details p,
+a {
+    font-size: 15px;
 }
 
 .c-details .icon {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .c-documentList {
-  padding: 1px;
-  max-height: calc(100vh - 170px);
-  overflow: auto;
+    padding: 1px;
+    max-height: calc(100vh - 170px);
+    overflow: auto;
 }
 
 .snippets {
-  margin-left: 5px;
-  font-size: 15px;
+    margin-left: 5px;
+    font-size: 15px;
 
-  p {
-    display: inline;
+    p {
+        display: inline;
 
-    &::after {
-      content: "\2026";
+        &::after {
+            content: '\2026';
+        }
     }
-  }
 }
 
 @media (max-width: 768px) {
-  .c-documents .c-button {
-    font-size: small;
-  }
+    .c-documents .c-button {
+        font-size: small;
+    }
 
-  .c-documents--text h2 {
-    font-size: larger;
-  }
+    .c-documents--text h2 {
+        font-size: larger;
+    }
 
-  .c-documents--text h3 {
-    font-size: 15px;
-  }
+    .c-documents--text h3 {
+        font-size: 15px;
+    }
 
-  .c-details h3, p, a  {
-    font-size: 14px;
-  }
+    .c-details h3,
+    p,
+    a {
+        font-size: 14px;
+    }
 }
