Fix documentList max-height

--- a/src/styles/documentItem.scss
+++ b/src/styles/documentItem.scss
@@ -120,7 +120,7 @@
 
 .c-documentList {
     padding: 1px;
-    max-height: calc(100vh - 170px);
+    max-height: 100vh;
     overflow-y: auto;
     width: 100%;
 }
