--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -1,103 +1,112 @@
 .c-filters {
-  position: relative;
-  text-align: center;
+    position: relative;
+    text-align: center;
 }
 
 .buttonContainer {
-  position: fixed;
+    position: fixed;
+    .resetFilter {
+        position: fixed;
+        display: inline-block;
+        .c-container {
+            margin-left: 0;
+            .c-button {
+                padding: 0;
+                .icon {
+                    position: relative;
+                    padding: 10px 10px 7px 10px;
+                }
+            }
+        }
+    }
 }
 
 .filtersDropdown {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 70px;
-  left: 15px;
-  width: auto;
-  height: auto;
-  max-height: 75vh;
-  padding: 5px;
-  opacity: 0.9;
-  background: white;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-  transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    left: 15px;
+    width: auto;
+    height: auto;
+    max-height: 75vh;
+    padding: 5px;
+    opacity: 0.9;
+    background: white;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    transition: box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .scrollableDiv {
-    overflow: auto;
-    max-height: 70vh;
-    padding-top: 5px;
-  }
+    .scrollableDiv {
+        overflow: auto;
+        max-height: 70vh;
+        padding-top: 5px;
+    }
 }
 
 .filtersFooter {
-
-  .c-container {
-    margin: 10px auto;
-  }
+    .c-container {
+        margin: 10px auto;
+    }
 }
 
 .clicked {
-  box-shadow: 0 0px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 }
 
 .typesContainer {
-  max-height: calc(75vh - 250px);
-  padding: 10px 25px;
+    max-height: calc(75vh - 250px);
+    padding: 10px 25px;
 
-  .c-button--text {
-
-    &.left {
-      padding-left: 35px;
+    .c-button--text {
+        &.left {
+            padding-left: 35px;
+        }
     }
-  }
 }
 
 .filtersHeader {
-  display: none;
+    display: none;
 }
 
 @media (max-width: 670px) {
+    .filtersDropdown {
+        z-index: 10;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        max-height: none;
+        min-height: none;
+        opacity: 1;
 
-  .filtersDropdown {
-    z-index: 10;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    max-height: none;
-    min-height: none;
-    opacity: 1;
+        .filtersHeader {
+            display: block;
 
-    .filtersHeader {
-      display: block;
-
-      .icon.right {
-        height: fit-content;
-      }
-    }
-  }
-
-  .typesContainer {
-    max-height: calc(75vh - 160px);
-    width: 80vw;
-    margin: 0 auto;
-    padding: 10px 0 0 0;
-  }
-
-  .c-filters {
-
-    .c-button {
-      padding: 5px;
-      min-width: 100px;
-      font-size: 14px;
-      text-align: center;
-
-      .icon {
-        &.right {
-          display: none;
+            .icon.right {
+                height: fit-content;
+            }
         }
-      }
     }
-  }
 
+    .typesContainer {
+        max-height: calc(75vh - 160px);
+        width: 80vw;
+        margin: 0 auto;
+        padding: 10px 0 0 0;
+    }
+
+    .c-filters {
+        .c-button {
+            padding: 5px;
+            min-width: 100px;
+            font-size: 14px;
+            text-align: center;
+
+            .icon {
+                &.right {
+                    display: none;
+                }
+            }
+        }
+    }
 }
