--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -96,15 +96,33 @@
     }
 
     .c-filters {
-        .c-button {
-            padding: 5px;
-            min-width: 100px;
-            font-size: 14px;
-            text-align: center;
+        .buttonContainer {
+            .c-container {
+                margin-right: 5px;
 
-            .icon {
-                &.right {
-                    display: none;
+                .c-button {
+                    padding: 5px;
+                    min-width: 100px;
+                    font-size: 14px;
+                    text-align: center;
+
+                    .icon {
+                        &.right {
+                            display: none;
+                        }
+                    }
+                }
+            }
+            .resetFilter {
+                .c-container {
+                    .c-button {
+                        min-width: 0;
+                        padding: 0;
+                        .icon {
+                            display: block;
+                            padding: 4px 4px 3px 4px;
+                        }
+                    }
                 }
             }
         }
