--- a/src/styles/zoomControls.scss
+++ b/src/styles/zoomControls.scss
@@ -35,15 +35,14 @@
     }
 }
 
-@media (max-width: 670px) {
-    .c-zoomControls .c-button {
-        padding: 5px;
-        min-width: 170px;
-    }
-
-    .c-zoomControls > .c-container {
-        font-size: small;
-        margin: 5px 15px;
-        text-align: center;
+@media (max-width: 350px) {
+    .c-zoomControls {
+        a {
+            .c-container {
+                .c-button {
+                    min-width: 115px;
+                }
+            }
+        }
     }
 }
