--- a/src/styles/typesList.scss
+++ b/src/styles/typesList.scss
@@ -1,56 +1,53 @@
 .c-typesList {
-  height: auto;
-  width: 100%;
-  text-align: left;
-  position: relative;
-  overflow: auto;
-}
+    height: auto;
+    width: 100%;
+    text-align: left;
+    position: relative;
+    overflow: auto;
 
-.c-typesList ul {
-  display: block;
-  width: 100%;
-  left: 0;
-  list-style: none;
-  padding: 25px 0 0 0;
-}
+    ul {
+        display: block;
+        width: 100%;
+        left: 0;
+        list-style: none;
+        padding: 25px 0 0 0;
 
-.c-typesList li {
-  position: relative;
-  margin-bottom: 10px;
-  text-align: left;
-}
+        li {
+            position: relative;
+            margin-bottom: 10px;
+            text-align: left;
+        }
+    }
 
-.c-typesList .c-container {
-  margin-bottom: 0;
-  margin-top: 0;
-  position: absolute;
-  top: 0;
-  left: -24px;
-}
+    .c-container {
+        margin-bottom: 0;
+        margin-top: 0;
+        position: absolute;
+        top: 0;
+        left: -24px;
 
-.c-typesList .c-container .c-button {
-  padding: 5px;
-  min-width: auto;
-}
+        .c-button {
+            padding: 5px;
+            min-width: auto;
 
-.c-typesList .c-container .c-button .icon {
-  padding: 5px;
-}
+            .icon {
+                padding: 5px;
+            }
+        }
+    }
 
-.c-typesList .c-badge {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 13px;
+    .c-badge {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 13px;
+    }
 }
 
 @media (max-width: 670px) {
-
-  .c-typesList .icon.direction-right {
-    top: 0px;
-  }
-
-  .c-typesList li {
-    font-size: 15px;
-  }
+    .c-typesList {
+        li {
+            font-size: 15px;
+        }
+    }
 }
