fix snippet styling

--- a/src/styles/documentItem.scss
+++ b/src/styles/documentItem.scss
@@ -96,7 +96,7 @@
         padding-right: 34px;
     }
     .c-details--text *,
-    .c-details--snippets * {
+    .c-details--snippets > * {
         margin: 5px;
         word-wrap: break-word;
         font-size: 15px;
