--- a/public/website/assets/sass/layout/_menu.scss
+++ b/public/website/assets/sass/layout/_menu.scss
@@ -84,7 +84,7 @@
                 display: block;
                 font-family: _font(family-heading);
                 font-size: 0.8em;
-                font-weight: _font(weight-heading);
+                font-weight: _font(weight-bold);
                 letter-spacing: _font(kern-heading);
                 line-height: 1.85em;
                 padding: 0.75em 0;
