message about no alerts yet

--- a/src/styles/alert.scss
+++ b/src/styles/alert.scss
@@ -57,6 +57,10 @@
             -webkit-margin-after: 5px;
             font-size: 16px;
         }
+        .notyet {
+            color: #cf5900;
+            font-style: italic;
+        }
     }
     .c-alert--footer {
         order: 99;
