--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,16 @@
 @import '../../node_modules/react-dates/lib/css/_datepicker.css';
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    -ms-overflow-style: none;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  font-size: 14px;
-  overflow: hidden;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    font-size: 14px;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
