--- a/src/styles/municipalities.scss
+++ b/src/styles/municipalities.scss
@@ -10,9 +10,9 @@
     height: 100%;
     padding: 0 5vw;
     margin: 0 auto;
-    overflow: auto;
     text-align: left;
-
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
     a {
         text-decoration: none;
         margin: 0;
