Change filters positioning when using small devices

--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -74,7 +74,8 @@
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
+        position: fixed;
         max-height: none;
         min-height: none;
         opacity: 1;
