Set high contrast text as default

--- a/public/website/assets/sass/base/_typography.scss
+++ b/public/website/assets/sass/base/_typography.scss
@@ -228,10 +228,16 @@ hr {
     text-align: right;
 }
 
-body.contrast {
+h2,
+p,
+a {
+    color: #000;
+}
+
+body.soft {
     h2,
     p,
     a {
-        color: #000;
+        color: #fff;
     }
 }
